# styled-prose

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: index.html  simple.txt  styled_prose.html
styled_prose/: __init__.py  config.py  creation.py  exceptions.py  fonts.py  stylesheet.py  util.py
templates/: custom.css  module.html.jinja2
tests/: conftest.py  test_create.py  test_creation.py  test_fonts.py  test_stylesheet.py  test_util.py
tests/data/: prose.txt  remote_manifest.txt  simple.txt  stylesheet.toml
