[project]
name = "styled-prose"
version = "0.1.0"
description = "Convert prose to images using discrete bitmap transformations."
authors = [
    {name = "thearchitector", email = "me@eliasfgabriel.com"},
]
readme = "README.md"
# license = {text = "MIT"}

requires-python = ">=3.8"
dependencies = [
    "reportlab>=4.0.0",
    "tomli>=2.0.0 ; python_version<'3.11'",
    "pydantic>=2.0.0",
    "httpx[http2]>=0.25.2",
    "pdf2image>=1.16.3",
    "Pillow>=10.1.0",
]

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.7.1",
    "types-Pillow>=10.1.0",
    "pytest-mock>=3.12.0",
    "respx>=0.20.2",
]

[tool.ruff]
target-version = "py38"
extend-select = ["I", "B"]

[tool.mypy]
python_version = "3.8"
strict = true

[tool.pytest.ini_options]
addopts = "-ra -svv"
testpaths = ["tests"]

[[tool.mypy.overrides]]
module = ["reportlab.*", "tomllib.*"]
ignore_missing_imports = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
